--- a/management_tool/templates/management_tool/home.html
+++ b/management_tool/templates/management_tool/home.html
@@ -11,7 +11,7 @@
     {% endfor %}
 </ul>
 {% endif %}
-<p>Welcome to your Home Page.
+<p>Welcome to your Home Page !!!???!!!.
     {% if request.user.is_authenticated %}
         You can <a href="{% url "user_edit" %}">edit your
         profile</a> or <a href="{% url "password_change" %}">change your password.
